--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ h1 {
 	padding: 40px 0;
 }
 h3 {
-	font-size: 21px;
+	font-size: 32px;
 }
 .wf-container{
 	max-width: 1024px;
@@ -46,8 +46,8 @@ h3 {
 .wf-list-city li {
 	display: inline-block;
 	border: 3px solid #fff;
-	font-size: 20px;
-	color: #d4d0d0;
+	font-size: 24px;
+	color: #e0f9ff;;
 	vertical-align: middle;
 	text-align: center;
 	padding: 40px 0;
